# reflex-admin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  rxconfig.py
.agent/: WORK_PROGRESS.md
.claude/: settings.local.json
bot/: __init__.py  main.py  process_manager.py  renderers.py  runtime.py  runtime_context.py
docs/: base-pro.md  base.md  db_api_orm_integration_spec.md
services/: __init__.py  admin_account_api.py  admin_account_service.py  agent_api.py  agent_service.py  auth_api.py  auth_service.py  bot_api.py  bot_service.py  bot_side_api.py  bot_side_service.py  dashboard_api.py  dashboard_service.py  deposit_chain_service.py  deposit_reconcile_runtime.py  deposit_wallet_resolver.py  export_task.py  export_task_api.py  finance_api.py  finance_service.py  http_api_client.py  importer.py  inventory_api.py  inventory_service.py  merchant_api.py  merchant_service.py  order_api.py  order_export.py  order_service.py  profile_api.py  profile_service.py  push_api.py  push_queue.py  reflex_api.py  request_security.py  security_errors.py  settings_api.py  settings_service.py  user_api.py  user_service.py  (+1 more)
shared/: __init__.py  bootstrap.py  config.py  database.py  schema_patch.py
temp_decompile/: user_state.cpython-312.py
test_reflex/: styles.py  test_reflex.py
tests/: test_account_access_page.py  test_agents_page.py  test_app_startup_bootstrap.py  test_auth_state_db_login.py  test_bootstrap_super_admin.py  test_bots_owner_filter_options.py  test_bots_page.py  test_dashboard_page.py  (+40 more)
(+141 files in other folders)
