[project]
name = "digital-goods-platform"
version = "0.1.0"
description = "数字商品自动售卖 SaaS 平台 - Telegram Bot + Reflex 后台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web 框架
    "reflex>=0.8.26",
    # 数据库
    "sqlmodel>=0.0.16",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    # Telegram Bot
    "aiogram>=3.4.0",
    # 缓存/队列
    "redis>=5.0.0",
    # HTTP 客户端
    "httpx>=0.26.0",
    # 配置管理
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    # 安全
    "bcrypt>=4.1.0",
    # 工具
    "qrcode>=7.4.0",
    "pillow>=10.0.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "bot", "test_reflex", "services"]
